Lots of changes - Mostly around having a detector for Aldor projects.