@@ -8,6 +8,7 @@ import com.google.common.collect.Streams;
 
 import java.util.ArrayDeque;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Deque;
 import java.util.List;
@@ -16,7 +17,6 @@ import java.util.stream.Stream;
 
 public class ConditionGrouper {
     private final SpadLibrary library;
-
 
     public ConditionGrouper(SpadLibrary library) {
         this.library = library;
@@ -32,40 +32,39 @@ public class ConditionGrouper {
                 continue;
             }
             allParents.add(candidate);
-            List<Syntax> parents = Try.of(() -> library.parentCategories(candidate.syntax)).orElse(e -> Collections.emptyList());
+            List<Syntax> parents = Try.of(() -> library.parentCategories(candidate.syntax())).orElse(e -> Collections.emptyList());
             List<SyntaxWithCondition> expanded = parents.stream().map(p -> p.is(If.class)
-                    ? withCondition(candidate.conditions, p.as(If.class).condition(), p.as(If.class).thenPart())
-                    : new SyntaxWithCondition(p, candidate.conditions)).collect(Collectors.toList());
+                    ? withCondition(candidate.conditions(), p.as(If.class).condition(), p.as(If.class).thenPart())
+                    : new SyntaxWithCondition(p, candidate.conditions())).toList();
             candidates.addAll(expanded);
-
         }
         return allParents;
     }
 
-    private boolean matches(List<SyntaxWithCondition> allParents, SyntaxWithCondition candidate) {
+    private static boolean matches(Collection<SyntaxWithCondition> allParents, SyntaxWithCondition candidate) {
         return allParents.stream().anyMatch(p -> p.match(candidate));
     }
 
-    List<SpadLibrary.Operation> operations(List<SyntaxWithCondition> parents) {
+    List<SpadLibrary.Operation> operations(Iterable<SyntaxWithCondition> parents) {
         List<SpadLibrary.Operation> operations = new ArrayList<>();
         for (SyntaxWithCondition parentWithCondition: parents) {
-            if (parentWithCondition.conditions.isEmpty()) {
-                operations.addAll(library.operations(parentWithCondition.syntax));
+            if (parentWithCondition.conditions().isEmpty()) {
+                operations.addAll(library.operations(parentWithCondition.syntax()));
             }
             else {
                 operations.stream()
-                        .map(op -> op.addConditions(parentWithCondition.conditions))
+                        .map(op -> op.addConditions(parentWithCondition.conditions()))
                         .forEach(operations::add);
             }
         }
         return operations;
     }
 
-    private SyntaxWithCondition withCondition(List<Syntax> conditions, Syntax condition, Syntax thenPart) {
+    private static SyntaxWithCondition withCondition(Collection<Syntax> conditions, Syntax condition, Syntax thenPart) {
         return new SyntaxWithCondition(thenPart, Streams.concat(Stream.of(condition), conditions.stream()).collect(Collectors.toList()));
     }
 
-    public static class SyntaxWithCondition {
+    public static final class SyntaxWithCondition {
         private final List<Syntax> conditions;
         private final Syntax syntax;
 
@@ -80,7 +79,7 @@ public class ConditionGrouper {
 
 
         public boolean match(SyntaxWithCondition candidate) {
-            return syntax.equals(candidate.syntax) && conditions.equals(candidate.conditions);
+            return syntax.equals(candidate.syntax()) && conditions.equals(candidate.conditions());
         }
 
         public Syntax syntax() {
