@@ -8,7 +8,9 @@ import aldor.test_util.LightPlatformJUnit4TestRule;
 import aldor.test_util.PathBasedTestRule;
 import com.intellij.openapi.projectRoots.Sdk;
 import com.intellij.openapi.roots.ProjectRootManager;
+import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.vfs.VfsUtil;
+import com.intellij.testFramework.TestLoggerFactory;
 import com.intellij.testFramework.fixtures.CodeInsightTestFixture;
 import org.junit.Rule;
 import org.junit.Test;
@@ -20,10 +22,13 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+import static aldor.test_util.JUnits.prePostTestRule;
 import static aldor.test_util.LightPlatformJUnit4TestRule.createFixture;
 import static aldor.test_util.SdkProjectDescriptors.aldorSdkProjectDescriptor;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
 
 public class AldorSpadLibraryTest {
     private final PathBasedTestRule executablePresentRule = new ExecutablePresentRule.AldorStd();
@@ -32,15 +37,25 @@ public class AldorSpadLibraryTest {
     @Rule
     public final TestRule platformTestRule =
             RuleChain.emptyRuleChain()
+                    .around(TestLoggerFactory.createTestWatcher())
                     .around(executablePresentRule)
                     .around(new LightPlatformJUnit4TestRule(testFixture, ""))
-                    .around(JUnits.prePostTestRule(this::showSDK, () -> {}))
+                    .around(prePostTestRule(this::showSDK, () -> {}))
                     .around(JUnits.setLogToInfoTestRule)
                     .around(JUnits.swingThreadTestRule());
 
     private void showSDK() {
         Sdk projectSdk = ProjectRootManager.getInstance(testFixture.getProject()).getProjectSdk();
         System.out.println("SDK IS: "+  projectSdk);
+    }
+
+    @Test
+    public void testType() {
+        SpadLibrary lib = new AldorSdkSpadLibraryBuilder(testFixture.getProject(), VfsUtil.findFile(Path.of(executablePresentRule.path()), false))
+                .build();
+        Syntax syntax = ParserFunctions.parseToSyntax(testFixture.getProject(), "Type");
+        List<SpadLibrary.Operation> ops = lib.operations(syntax);
+        assertEquals(0, ops.size());
     }
 
     @Test
@@ -63,7 +78,7 @@ public class AldorSpadLibraryTest {
         Syntax syntax = ParserFunctions.parseToSyntax(testFixture.getProject(), "IndexedAtom");
         List<SpadLibrary.Operation> ops = lib.operations(syntax);
 
-        assertEquals(List.of("atom", "index", "isNegation?", "negate", "negated?", "positive"),
+        assertEquals(List.of("atom", "index", "isNegation?"),
                 ops.stream().map(op -> op.name()).sorted().collect(Collectors.toList()));
         ops.forEach(p -> System.out.println("Parent: " + p.declaration()));
     }
@@ -83,7 +98,7 @@ public class AldorSpadLibraryTest {
         assertNotNull(apply.declaration());
     }
 
-
+    @SuppressWarnings("MagicNumber")
     @Test
     public void testListString() {
         SpadLibrary lib = new AldorSdkSpadLibraryBuilder(testFixture.getProject(),
@@ -92,12 +107,31 @@ public class AldorSpadLibraryTest {
 
         Syntax syntax = ParserFunctions.parseToSyntax(testFixture.getProject(), "List String");
         List<SpadLibrary.Operation> ops = lib.operations(syntax);
+        System.out.println("Found " + ops.size() + " operations");
+        assertFalse(ops.isEmpty());
+        Pair<List<SpadLibrary.ParentType>, List<SpadLibrary.Operation>> pp = lib.allParents(syntax);
+        // Random numbers... as long as we get *something*, we probably have everything
+        assertTrue(pp.getSecond().size() > 20);
+        assertTrue(pp.getFirst().size() > 10);
+        System.out.println("Ops: " + pp.getSecond().size());
+        for (var op: pp.getSecond()) {
+            System.out.println("Operation: "+ op);
+        }
+    }
 
-        Map<String, List<SpadLibrary.Operation>> opsForName = ops.stream().collect(Collectors.groupingBy(op -> op.name()));
-        opsForName.forEach( (k, v) -> {
-            System.out.println("Operations " + k + " --> " + v);
-                });
-        SpadLibrary.Operation apply = opsForName.get("apply").get(0);
-        assertNotNull(apply.declaration());
+    @Test
+    public void testUndefined() {
+        SpadLibrary lib = new AldorSdkSpadLibraryBuilder(testFixture.getProject(),
+                VfsUtil.findFile(Path.of(executablePresentRule.path()), false))
+                .build();
+
+        Syntax syntax = ParserFunctions.parseToSyntax(testFixture.getProject(), "FooBar String");
+        List<SpadLibrary.Operation> ops = lib.operations(syntax);
+        System.out.println("Found " + ops.size() + " operations");
+        assertTrue(ops.isEmpty());
+        Pair<List<SpadLibrary.ParentType>, List<SpadLibrary.Operation>> pp = lib.allParents(syntax);
+        assertEquals(1, pp.getFirst().size());
+        assertEquals("*Unknown*", pp.getFirst().get(0).type().toString());
+        assertTrue(pp.getSecond().isEmpty());
     }
 }
